fix: enhance video autoplay handling and visibility in Header and Footer components

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -88,3 +88,7 @@ body{
   }
   
 }
+video::-webkit-media-controls {
+  display: none !important;
+  opacity: 0;
+}
